tests/parsing/smtlib/v2.7/errors/091_get-assignment_unclosed_1.smt2
(set-logic ALL)
(get-assignment _)
